2004-02-11  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c

	More cleanups: making it easier to get rid of the final traces of GObject hackery

	* popup.c

	Cleaned up fiddly special-casing of stock items

	* cong-app.c, cong-dispspec-element.c, cong-dispspec-registry.c, cong-editor-area-text-comment.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area.c, cong-editor-node-text.c, cong-editor-widget3.c, cong-eel.c, cong-file-save.c, cong-menus.c, cong-node-properties-dialog.c, cong-primary-window.c, cong-tree-view.c, cong-util.c, cong-util.h, cursor.c, global.h, main.c, plugin-paragraph-area-paragraph.c, popup.c, select.c, tree.c, xmledit.c

	Clean up of UI hooks, moving from global.h into new header; use decent marshalling routines for the popup menu rather than evil GObject hackery

	* cong-ui-hooks.h, Makefile.am

	New file

	* popup.c

	More tidying up

	* cong-util.c, cong-util.h, popup.c

	Tidy up of the popup menu code

	* cong-node.c, cong-node.h, cong-util.c, cong-util.h, global.h, popup.c, xmldata.c

	Replaced the string_selection_dialog with cong_util_modal_element_selection_dialog and a system for identifying potential elements that can support namespaces

2004-02-10  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-file-export.c, cong-file-print.c, cong-node-properties-dialog.c, xmledit.c

	Removing redundant usage of CongDispspec

2004-02-07  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-fo.c

	Use namespace URI rather than looking for fo prefix when determining if a document is an XSL-FO file.

	* cong-document.c, plugin-dtd.c

	Sorted out namespaces in the DTD->RELAX NG importer
